# gen-ai-hackathon

./: .gitignore  README.md  data.jsonl  finetune.py  finetune_data_generator.py  finetune_job_list.py  first_data_generator.py  issue_finetune_model.py  output.csv  pyproject.toml  question.py  tmp.json
domain/shogi/: kishi.py  strategies.py
failure/: main.py
